--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".baseActivityWithFragments">
 
+    <FrameLayout
+        android:layout_above="@id/bottom_navigation"
+        android:id="@+id/current_page"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 <com.google.android.material.bottomnavigation.BottomNavigationView
     app:menu="@menu/menu_main_bnv"
     android:id="@+id/bottom_navigation"
