--- a/app/src/main/res/layout/fragment_menu_rv_item.xml
+++ b/app/src/main/res/layout/fragment_menu_rv_item.xml
@@ -1,12 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="10dp">
 
-    <TextView
-        android:id="@+id/fragment_menu_rv_item_title"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_gravity="center"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="35sp"/>
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/fragment_menu_rv_item_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="21sp" />
+
+        <TextView
+            android:id="@+id/fragment_menu_rv_item_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="1dp"
+            />
+
+        <TextView
+            android:id="@+id/fragment_menu_rv_item_weight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             />
+
+        <LinearLayout
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/fragment_menu_rv_item_price"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="15dp"
+                android:gravity="center"
+
+                android:textColor="@android:color/black"
+                android:textSize="15sp" />
+
+            <ImageView
+                android:id="@+id/fragment_menu_rv_item_icon_plus"
+                android:layout_width="26dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/fragment_menu_rv_item_icons"
+                android:padding="3dp"
+                android:src="@drawable/more" />
+
+            <TextView
+                android:id="@+id/fragment_menu_rv_item_count_of_item"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/fragment_menu_rv_item_icon_minus"
+                android:layout_width="26dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/fragment_menu_rv_item_icons"
+                android:padding="3dp"
+                android:src="@drawable/minus"
+                android:visibility="invisible" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/fragment_menu_rv_item_icon"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            />
+    </LinearLayout>
+
 
 </LinearLayout>
