--- a/app/src/main/res/menu/menu_main_bnv.xml
+++ b/app/src/main/res/menu/menu_main_bnv.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_main_menu"
     android:title="@string/main_bnv_menu"
-    android:icon="@android:drawable/ic_menu_compass"
+    android:icon="@drawable/bnv_menu_icon_menu"
     />
     <item android:id="@+id/menu_main_basket"
         android:title="@string/main_bnv_basket"
-        android:icon="@android:drawable/ic_menu_compass"
+        android:icon="@drawable/bnv_menu_icon_basket"
         />
     <item android:id="@+id/menu_main_profile"
         android:title="@string/main_bnv_profile"
-        android:icon="@android:drawable/ic_menu_compass"
+        android:icon="@drawable/bnv_menu_icon_profile_man"
         />
 </menu>
