--- a/app/src/main/res/layout/fragment_profile_fragment_addreses.xml
+++ b/app/src/main/res/layout/fragment_profile_fragment_addreses.xml
@@ -4,6 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/fragment_profile_fragment_addresses_title"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:textColor="@android:color/black"
+        android:text="Ваши адреса доставки"/>
+<HorizontalScrollView
+    android:id="@+id/fragment_profile_fragment_addresses_baseScrollView"
+    android:layout_below="@+id/fragment_profile_fragment_addresses_title"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:scrollbars="none">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
+    <include layout="@layout/fragment_profile_fragment_addresses_base_address_cell"/>
+    <include layout="@layout/fragment_profile_fragment_addresses_base_address_cell"/>
+    <include layout="@layout/fragment_profile_fragment_addresses_base_address_cell"/>
+    <include layout="@layout/fragment_profile_fragment_addresses_base_address_cell"/>
+    <include layout="@layout/fragment_profile_fragment_addresses_base_address_cell"/>
+
+    </LinearLayout>
+</HorizontalScrollView>
 
 </RelativeLayout>
