--- a/app/src/main/res/layout/fragment_profile_fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_profile_fragment_orders.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_profile_fragment_addresses_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
