--- a/app/src/main/res/layout/fragment_profile_fragment_addresses.xml
+++ b/app/src/main/res/layout/fragment_profile_fragment_addresses.xml
@@ -20,17 +20,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbars="none">
+
     <LinearLayout
+        android:id="@+id/fragment_profile_fragment_addresses_container"
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"/>
 
-    <include layout="@layout/fragment_profile_fragment_addresses_base_address_cell"/>
-    <include layout="@layout/fragment_profile_fragment_addresses_base_address_cell"/>
-    <include layout="@layout/fragment_profile_fragment_addresses_base_address_cell"/>
-    <include layout="@layout/fragment_profile_fragment_addresses_base_address_cell"/>
-    <include layout="@layout/fragment_profile_fragment_addresses_base_address_cell"/>
-
-    </LinearLayout>
 </HorizontalScrollView>
 
 </RelativeLayout>
