--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#858080</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimaryDark">#A39B9B</color>
+    <color name="colorAccent">#000000</color>
 
     <color name="mainBackground">#FFFFFFFF</color>
     <color name="fragmentMenuBackground">#FFFFFFFF</color>
@@ -38,6 +38,12 @@
     <color name="bnv_item_icon_tint">#808080</color>
     <color name="bnv_item_icon_tint_pressed">#333333</color>
 
+
+
+
+
+    <color name="login_button">#64e1dc</color>
+    <color name="login_button_pressed">#55C6C1</color>
 
 
 
