--- a/app/src/main/res/layout/login_fill_info.xml
+++ b/app/src/main/res/layout/login_fill_info.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:behavior_hideable="false"
     app:behavior_peekHeight="150dp"
-    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+    app:layout_behavior="">
 
     <TextView
         android:id="@+id/login_fillInfo_title"
@@ -66,11 +66,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <RadioGroup
+                android:id="@+id/login_fillInfo_sex_rg"
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <RadioButton
-                    android:id="@+id/login_fill_info_rb_man"
+                    android:id="@+id/login_fillInfo_rb_man"
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -83,7 +84,7 @@
 
 
                 <RadioButton
-                    android:id="@+id/login_fill_info_rb_woman"
+                    android:id="@+id/login_fillInfo_rb_woman"
                     android:gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -128,9 +129,12 @@
     <Button
         android:id="@+id/login_fillInfo_button_commit"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/login_fillInfo_container_email"
         android:background="@drawable/login_button_selector"
+        android:textAllCaps="false"
+        android:textSize="18sp"
         android:text="Рассказать о себе"
         android:layout_width="210dp"
         android:layout_height="wrap_content"/>
