--- a/app/src/main/res/drawable/fragment_basket_button_for_order.xml
+++ b/app/src/main/res/drawable/fragment_basket_button_for_order.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="50dp"/>
 
-    <solid android:color="@android:color/holo_green_dark"/>
+    <solid android:color="@color/fragment_basket_button_for_order"/>
 </shape>
