--- a/app/src/main/res/drawable/fragment_basket_button_for_order_pressed.xml
+++ b/app/src/main/res/drawable/fragment_basket_button_for_order_pressed.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="50dp"/>
 
-    <corners android:radius="15dp"/>
-
-
-
+    <solid android:color="@color/fragment_basket_button_for_order_pressed"/>
 </shape>
