--- a/app/src/main/res/layout/fragment_profile_fragment_addresses_add_new_bsv.xml
+++ b/app/src/main/res/layout/fragment_profile_fragment_addresses_add_new_bsv.xml
@@ -26,15 +26,15 @@
         android:orientation="vertical"
         >
         <TextView
-            android:text="Название"
+            android:text="Название*"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"/>
 
         <EditText
+            android:id="@+id/fragment_profile_fragment_addresses_add_new_et_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Квартира оксаны"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 
@@ -55,9 +55,9 @@
             android:textSize="15sp"/>
 
         <EditText
+            android:id="@+id/fragment_profile_fragment_addresses_add_new_et_district"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Центральный"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 
@@ -77,9 +77,9 @@
             android:textSize="15sp"/>
 
         <EditText
+            android:id="@+id/fragment_profile_fragment_addresses_add_new_et_street"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="12 курская"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
@@ -97,11 +97,11 @@
             android:textSize="15sp"/>
 
         <EditText
+            android:id="@+id/fragment_profile_fragment_addresses_add_new_et_house"
             android:textAlignment="center"
             android:maxLength="4"
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:text="51"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
@@ -109,7 +109,7 @@
         android:layout_marginTop="7dp"
         android:layout_below="@id/fragment_profile_fragment_addresses_street_of_address"
         android:layout_toEndOf="@id/fragment_profile_fragment_addresses_house_of_address"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
@@ -120,21 +120,21 @@
             android:textSize="15sp"/>
 
         <EditText
+            android:id="@+id/fragment_profile_fragment_addresses_add_new_et_corpus"
             android:textAlignment="center"
             android:maxLength="3"
-
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:text="А1"/>
+            android:layout_width="50dp"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/fragment_profile_fragment_addresses_porch_of_address"
         android:layout_marginTop="7dp"
-        android:layout_below="@id/fragment_profile_fragment_addresses_house_of_address"
-        android:layout_width="match_parent"
+        android:layout_below="@id/fragment_profile_fragment_addresses_street_of_address"
+        android:layout_toEndOf="@id/fragment_profile_fragment_addresses_corpus_of_address"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         >
         <TextView
             android:text="Подъезд"
@@ -143,18 +143,21 @@
             android:textSize="15sp"/>
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="5"/>
+            android:id="@+id/fragment_profile_fragment_addresses_add_new_et_porch"
+            android:textAlignment="center"
+            android:maxLength="3"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/fragment_profile_fragment_addresses_floor_of_address"
         android:layout_marginTop="7dp"
-        android:layout_below="@id/fragment_profile_fragment_addresses_porch_of_address"
+        android:layout_below="@id/fragment_profile_fragment_addresses_street_of_address"
+        android:layout_toEndOf="@id/fragment_profile_fragment_addresses_porch_of_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         >
         <TextView
             android:text="Этаж"
@@ -163,9 +166,11 @@
             android:textSize="15sp"/>
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="12"/>
+            android:id="@+id/fragment_profile_fragment_addresses_add_new_et_floor"
+            android:textAlignment="center"
+            android:maxLength="3"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
@@ -183,13 +188,37 @@
             android:textSize="15sp"/>
 
         <EditText
-            android:layout_width="match_parent"
+            android:id="@+id/fragment_profile_fragment_addresses_add_new_et_flat"
+            android:textAlignment="center"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:text="218"/>
+            android:maxLength="5" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/fragment_profile_fragment_addresses_add_new_desc"
+        android:layout_below="@id/fragment_profile_fragment_addresses_flat_of_address"
+        android:layout_marginTop="10dp"
+        android:text="* - обязательно к заполнению"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/fragment_profile_fragment_addresses_add_new_button_for_add"
+        android:layout_below="@id/fragment_profile_fragment_addresses_add_new_desc"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/login_button_selector"
+        android:textAllCaps="false"
+        android:text="Добавить"
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="210dp"
+        android:layout_height="wrap_content"/>
 
 
 
 
 
 </RelativeLayout>
+    <!--detail>TODO:ADD SELECTOR AND ANOTHER FILE> </detail-->
