base app + fix some bugs

--- a/app/src/main/res/layout/login_fill_info.xml
+++ b/app/src/main/res/layout/login_fill_info.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:behavior_hideable="false"
-    app:behavior_peekHeight="150dp"
-    app:layout_behavior="">
+    android:layout_height="match_parent">
+
 
     <TextView
         android:id="@+id/login_fillInfo_title"
